# lib-ian

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  ian-components.cmake
.devcontainer/: Dockerfile  devcontainer.json
app/: core.app.cpp  log.app.cpp  net.app.cpp  socket.app.cpp
cmake/: CheckPublicHeaders.cmake  CompilerWarnings.cmake  ComponentHelpers.cmake  Coverage.cmake  Deps.cmake  InstallSetup.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  TestInfra.cmake  TopLevelInit.cmake  ian-component-config.cmake.in  ian-net-config.cmake.in
docs/adr/: 0001-no-public-handle-layer.md  0002-header-library-no-dynamic-allocation.md
docs/canvas/: struct addrinfo.md
include/ian/: core.hpp  log.hpp  net.hpp  socket.hpp
scripts/: gen-ostream.py  install-hooks.sh  new_component.py
scripts/hooks/: pre-push
test/: core.test.cpp  log.test.cpp  net.test.cpp  socket.test.cpp
